--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.4"
+    "jwt-simple": "^0.5.6",
+    "moment": "^2.29.4",
+    "mongoose": "^7.0.4",
+    "uuid": "^9.0.0"
   }
 }
